force-app/main/default/objects/Checklist__c/Checklist__c.object-meta.xml
<CustomObject>
    <label>Check List</label>
    <nameField>
        <displayFormat>CLIST-{0000000}</displayFormat>
        <label>Checklist ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CheckList</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>