force-app/main/default/objects/Checklist__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Get new email</fullName>
            </value>
            <value>
                <fullName>Get laptop</fullName>
            </value>
            <value>
                <fullName>Get stationary</fullName>
            </value>
            <value>
                <fullName>Sign contract</fullName>
            </value>
            <value>
                <fullName>Participate &quot;Chương trình hội nhập&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>