force-app/main/default/objects/Checklist__c/fields/Employee_Process__c.field-meta.xml
<CustomField>
    <fullName>Employee_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Process</label>
    <referenceTo>Employee_Process__c</referenceTo>
    <relationshipName>Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>