force-app/main/default/objects/Checklist__c/fields/Instruction__c.field-meta.xml
<CustomField>
    <fullName>Instruction__c</fullName>
    <label>Instruction</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>